--- a/disney-vite/package.json
+++ b/disney-vite/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@mui/material": "^5.13.6",
     "@mui/styled-engine-sc": "^5.12.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
